# conkyfer

./: .gitignore  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test-python-package.yml
