[metadata]
name = conkyfer
version = 0.1.0a0.dev0
url = https://github.com/EpicWink/conkyfer
project_urls =
    Source = https://github.com/EpicWink/conkyfer
    Tracker = https://github.com/EpicWink/conkyfer/issues
author = Laurie O
author_email = laurie_opperman@hotmail.com
description = Concurrent and asynchronous transfer of remote files for processing
long_description = file: README.md
long_description_content_type = text/markdown
keywords = transfer, remote
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
